<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="-10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_500"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/automatic_tapping"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight=".5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="@string/hour"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/hour"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/edit_text_border"
                            android:enabled="false"
                            android:focusableInTouchMode="false"
                            android:padding="3dp"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight=".5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="@string/min"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/min"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/edit_text_border"
                            android:enabled="false"
                            android:padding="3dp"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight=".5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="@string/sec"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/sec"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/edit_text_border"
                            android:enabled="false"
                            android:padding="3dp"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight=".5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="@string/ms"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/mili"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/edit_text_border"
                            android:enabled="false"
                            android:padding="3dp"
                            android:textColor="@color/black" />

                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/ll2Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/location"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/x"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/xCod"
                            android:layout_width="70dp"
                            android:layout_height="50dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/edit_text_border"
                            android:enabled="false"
                            android:padding="3dp"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/y"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/yCod"
                            android:layout_width="70dp"
                            android:layout_height="50dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/edit_text_border"
                            android:enabled="false"
                            android:padding="3dp"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:id="@+id/ll3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginRight="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/on_off"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <Switch
                            android:id="@+id/switch1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:checked="false"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />
                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</layout>